--- a/lessons.html
+++ b/lessons.html
@@ -89,7 +89,7 @@
     </div>
 
 
-
+<!---
     <div id="lessonContent"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
@@ -142,7 +142,100 @@
   
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+--> 
 
+<div id="lessonContent">
+    <!-- The fetched lesson content will be inserted here -->
+</div>
+
+
+<!-- Add the latest Firebase SDK -->
+<script defer src="https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/10.7.2/firebase-storage.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
+
+<script defer>
+    // Initialize Firebase
+    const firebaseConfig = {
+    apiKey: "AIzaSyABxSUHqekjFDhnyFGFKQd3weF-YaKw4ls",
+    authDomain: "seniorproject-7e271.firebaseapp.com",
+    databaseURL: "https://seniorproject-7e271-default-rtdb.firebaseio.com",
+    projectId: "seniorproject-7e271",
+    storageBucket: "seniorproject-7e271.appspot.com",
+    messagingSenderId: "449257268811",
+    appId: "1:449257268811:web:5c7b798acb6aff00758fce",
+    measurementId: "G-TXKSFRLVBJ"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+</script>
+
+<script defer>
+
+    const storage = firebase.storage();
+    const storageRef = storage.ref();
+
+    // Reference to your lesson file in Firebase Storage
+    const lessonFileRef = storageRef.child('gs://seniorproject-7e271.appspot.com/lesson.yaml');
+
+    // Get the download URL of the lesson file
+    lessonFileRef.getDownloadURL()
+        .then((url) => {
+            // Fetch the lesson data using the obtained URL
+            return fetchLessonData(url);
+        })
+        .then((data) => {
+            // Process and display the lesson data
+            processLessonData(data);
+        })
+        .catch((error) => {
+            console.error('Error getting download URL:', error);
+        });
+
+    // Function to fetch YAML content
+    async function fetchLessonData(file) {
+        const response = await fetch(file);
+        const text = await response.text();
+        return jsyaml.load(text);
+    }
+
+    // Assuming you have a function to process lesson data
+    function processLessonData(lessonData) {
+        let outputHTML = '';
+
+        for (const item of lessonData) {
+            const { Class, Output, CorrectAnswer, AnswerTests, Hint } = item;
+
+            switch (Class) {
+                case 'text':
+                    outputHTML += `<p>${Output}</p>`;
+                    break;
+                case 'cmd_question':
+                    outputHTML += `<p>${Output}</p>`;
+                    outputHTML += `<input type="text" id="userAnswer" placeholder="Your Answer">`;
+                    outputHTML += `<button onclick="checkAnswer('${CorrectAnswer}', '${AnswerTests}', '${Hint}')">Submit Answer</button>`;
+                    break;
+                case 'meta':
+                    outputHTML += `<h1>${item.Course} - ${item.Lesson}</h1>`;
+                    // Include other properties as needed
+                    break;
+                // Add cases for other classes as needed
+                default:
+                    break;
+            }
+        }
+
+        document.getElementById('lessonContent').innerHTML = outputHTML;
+    }
+
+
+// Fetch and process the lesson data
+//const lessonFile = 'gs://seniorproject-7e271.appspot.com/lesson.yaml'; // Update with the correct path to your YAML file within Firebase Storage
+//fetchLessonData(lessonFile)
+    //.then((data) => processLessonData(data))
+    //.catch((error) => console.error(error));
+
+</script>
 
 <!-- Embedded Shiny App -->
 <iframe src="http://127.0.0.1:6868" width="800" height="600"></iframe>
