--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
         <div class = "form-box login">
             <h2>Login</h2>
             <form action="#">
-                // Add in a box for Username
-                // Add in first name
-                // Add in last name
                 <div class="input-box">
                     <span class="icon">
                         <ion-icon name="mail"></ion-icon>
@@ -49,7 +46,7 @@
                     <a href="#">Forgot Password?</a>
                 </div>
                 <div>
-                    <button type="submit" id='signUp'class="btn" value="Sign up">Login</button>
+                    <button type="submit" class="btn">Login</button>
                 </div>
                 <div class="login-register">
                     <p>New user? <a href="#"
@@ -64,21 +61,21 @@
                     <span class="icon">
                         <ion-icon name="person"></ion-icon>
                     </span>
-                    <input type="text" required>
+                    <input type="text" required id="username">
                     <label>Username</label>
                 </div>
                 <div class="input-box">
                     <span class="icon">
                         <ion-icon name="mail"></ion-icon>
                     </span>
-                    <input type="email" required>
+                    <input type="email" required id="email1">
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon">
                         <ion-icon name="lock-closed"></ion-icon>
                     </span>
-                    <input type="password" required>
+                    <input type="password" required id="password1">
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
@@ -100,6 +97,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
+<!---
 <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
@@ -127,6 +125,7 @@
     const database = getDatabase(app);
     const auth = getAuth();
 
+    const signUpButton = document.getElementById('signUp');
 
     signUp.addEventListener('click',(e) => {
 
@@ -150,6 +149,58 @@
             });
     });
   </script>
+-->
+
+<script>
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
+import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
+import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-auth.js";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyABxSUHqekjFDhnyFGFKQd3weF-YaKw4ls",
+  authDomain: "seniorproject-7e271.firebaseapp.com",
+  databaseURL: "https://seniorproject-7e271-default-rtdb.firebaseio.com",
+  projectId: "seniorproject-7e271",
+  storageBucket: "seniorproject-7e271.appspot.com",
+  messagingSenderId: "449257268811",
+  appId: "1:449257268811:web:5c7b798acb6aff00758fce",
+  measurementId: "G-TXKSFRLVBJ"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const database = getDatabase(app);
+const auth = getAuth();
+
+registerLink.addEventListener('click', (e)=> { //check if this should be register link!!
+    wrapper.classList.add('active');
+    var username = document.getElementById('username').value;
+    var email = document.getElementById('email1').value;
+    var password = document.getElementById('password1').value;
+
+
+    createUserWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+        // Signed up 
+            const user = userCredential.user;
+            alert('user created!');
+            // ...
+        })
+        .catch((error) => {
+            const errorCode = error.code;
+            const errorMessage = error.message;
+
+            alert(errorMessage);
+        // ..
+  });
+
+});
+</script>
 
 </html>
 
