--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="remember-forgot">
                     
                 </div>
-                <button type="submit" class="btn">Register</button>
+                <button type="submit" class="btn" id="signUp">Register</button>
                 <div class="login-register">
                     <p>Already have an account? <a href="#"
                     class="login-link">Login</a></p>
@@ -89,12 +89,6 @@
             </form>
         </div>
     </div>
-
-
-
-    <script src="script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 <!---
@@ -151,56 +145,11 @@
   </script>
 -->
 
-<script>
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
-import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
-import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-auth.js";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+<script src="script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyABxSUHqekjFDhnyFGFKQd3weF-YaKw4ls",
-  authDomain: "seniorproject-7e271.firebaseapp.com",
-  databaseURL: "https://seniorproject-7e271-default-rtdb.firebaseio.com",
-  projectId: "seniorproject-7e271",
-  storageBucket: "seniorproject-7e271.appspot.com",
-  messagingSenderId: "449257268811",
-  appId: "1:449257268811:web:5c7b798acb6aff00758fce",
-  measurementId: "G-TXKSFRLVBJ"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const database = getDatabase(app);
-const auth = getAuth();
-
-registerLink.addEventListener('click', (e)=> { //check if this should be register link!!
-    wrapper.classList.add('active');
-    var username = document.getElementById('username').value;
-    var email = document.getElementById('email1').value;
-    var password = document.getElementById('password1').value;
-
-
-    createUserWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-        // Signed up 
-            const user = userCredential.user;
-            alert('user created!');
-            // ...
-        })
-        .catch((error) => {
-            const errorCode = error.code;
-            const errorMessage = error.message;
-
-            alert(errorMessage);
-        // ..
-  });
-
-});
-</script>
+<script type="module" src="index.js"></script>
 
 </html>
 
