--- a/instructions.html
+++ b/instructions.html
@@ -21,14 +21,83 @@
     <header>
         <h2 class="logo">MSMU</h2>
         <nav class="navigation">
-            <a href=""#>Home</a>
-            <a href=""#>Instructions</a>
-            <a href=""#>Lessons</a>
+            <a href="home.html"#>Home</a>
+            <a href="instructions.html"#>Instructions</a>
+            <a href="lessons.html"#>Lessons</a>
             <button id="btnSignOut" class="btnSignOut">Sign Out</button>
         </nav>
     </header>
     <div class="wrapper">
         <p>Hello</p>
+        </div>
+        <span class="icon-close">
+            <ion-icon name="close-circle"></ion-icon>
+        </span>
+
+        <div class = "form-box login">
+            <h2>Login</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="mail"></ion-icon>
+                    </span>
+                    <input type="email" required id="email">
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="lock-closed"></ion-icon>
+                    </span>
+                    <input type="password" required id="password">
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">
+                    Remember me</label>
+                    <a href="#">Forgot Password?</a>
+                </div>
+                <div>
+                    <button type="submit" class="btn">Login</button>
+                </div>
+                <div class="login-register">
+                    <p>New user? <a href="#"
+                    class="register-link">Register for an account</a></p>
+                </div>
+            </form>
+        </div>
+        <div class = "form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="person"></ion-icon>
+                    </span>
+                    <input type="text" required id="username">
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="mail"></ion-icon>
+                    </span>
+                    <input type="email" required id="email1">
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="lock-closed"></ion-icon>
+                    </span>
+                    <input type="password" required id="password1">
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    
+                </div>
+                <button type="submit" class="btn" id="signUp">Register</button>
+                <div class="login-register">
+                    <p>Already have an account? <a href="#"
+                    class="login-link">Login</a></p>
+                </div>
+            </form>
         </div>
 
         <div class="file-content" id="fileContent1">
@@ -73,7 +142,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
  
 
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
