--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <h2 class="logo">MSMU</h2>
         <nav class="navigation">
-            <a href=""#>Home</a>
-            <a href=""#>Instructions</a>
-            <a href=""#>Lessons</a>
+            <a href="#">Home</a>
+            <a href="#">Getting Started with R</a>
+            <a href="#">Lessons</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
@@ -40,13 +40,9 @@
                     <input type="password" required id="password">
                     <label>Password</label>
                 </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox">
-                    Remember me</label>
-                    <a href="#">Forgot Password?</a>
-                </div>
+                
                 <div>
-                    <button type="submit" class="btn">Login</button>
+                    <button type="submit" class="btn" id="loginButton">Login</button>
                 </div>
                 <div class="login-register">
                     <p>New user? <a href="#"
@@ -89,67 +85,48 @@
             </form>
         </div>
     </div>
-</body>
 
-<!---
 <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
-    import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-auth.js";
+    
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+    import { getDatabase } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
 
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyABxSUHqekjFDhnyFGFKQd3weF-YaKw4ls",
-      authDomain: "seniorproject-7e271.firebaseapp.com",
-      databaseURL: "https://seniorproject-7e271-default-rtdb.firebaseio.com",
-      projectId: "seniorproject-7e271",
-      storageBucket: "seniorproject-7e271.appspot.com",
-      messagingSenderId: "449257268811",
-      appId: "1:449257268811:web:5c7b798acb6aff00758fce",
-      measurementId: "G-TXKSFRLVBJ"
+        apiKey: "AIzaSyD1Z5pF1K2rfmByfUsyIWQnLyyJSL31R6w",
+        authDomain: "authentication-app-3fc56.firebaseapp.com",
+        databaseURL: "https://authentication-app-3fc56-default-rtdb.firebaseio.com",
+        projectId: "authentication-app-3fc56",
+        storageBucket: "authentication-app-3fc56.appspot.com",
+        messagingSenderId: "146383045860",
+        appId: "1:146383045860:web:ad9780ac6c0c6e90b898f1"
     };
-  
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
     const auth = getAuth();
 
-    const signUpButton = document.getElementById('signUp');
+    //signUp.addEventListener('click', (e) => {
+        //var email = document.getElementById('email1').value;
+        //var password = document.getElementById('password1').value;
+        //var username = document.getElementById('username').value;
 
-    signUp.addEventListener('click',(e) => {
+    //});
 
-        var email = document.getElementById('email').value;
-        var passwod = document.getElementById('password').value;
+</script>
 
 
-        createUserWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-            // Signed up 
-                const user = userCredential.user;
-                alert('user created!');
-                // ...
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-
-                alert(errorMessage);
-            // ..
-            });
-    });
-  </script>
--->
-
-<script src="script.js"></script>
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-<script type="module" src="index.js"></script>
+    <script type="module" src="firebase-config.js"></script>
+    <script type="module" src="script.js"></script>
+    <!--<script type="module" src="index.js"></script>-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- Firebase SDK scripts -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js"></script>
+</body>
 
 </html>
 
